# CommonChat

./: CMakeLists.txt
client/: Gui.cpp  Gui.hpp  main.cpp
client/communicate/: Communicate.cpp  Communicate.hpp
client/desktop/: DesktopGui.cpp  DesktopGui.hpp  GLFWHelper.hpp
client/graphics/: IGraphics.hpp
client/graphics/vulkan/: Buffer.cpp  Buffer.hpp  CommandExecuter.cpp  Helper.cpp  Helper.hpp  Image.cpp  Image.hpp  ModelManager.cpp  ModelManager.hpp  Render.hpp  SetupWithGlfw.cpp  SetupWithGlfw.hpp  SetupWithOpenxr.cpp  SetupWithOpenxr.hpp  VulkanGlfwAdapter.cpp  VulkanGlfwAdapter.hpp  VulkanManager.cpp  VulkanManager.hpp  VulkanManagerCore.cpp  VulkanManagerCore.hpp  VulkanOpenxrAdapter.cpp  VulkanOpenxrAdapter.hpp
client/graphics/vulkan/renderer/: SimpleRenderProc.cpp  SimpleRenderProc.hpp
client/shaders/: shader.frag  shader.vert
client/xr/: Manager.cpp  Manager.hpp  Xr.cpp  Xr.hpp
server/: main.cpp
